Fixed result panel overflow

--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 body
 {
     display: flex;
-    justify-content: space-around;
-    padding-top: 330px;
-    background-image: url("./backgroundImage/testing.jpg");
+    justify-content: center;
+    align-items: center;
+    background-image: url(./backgroundImage/testing.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100vw;
+    background-size: cover;
     font-family: Frutiger;
     filter: drop-shadow(0 0 0.75rem #063d7a);
+    min-height: 100vh;
+    margin: 0;
 }
 
 @font-face
@@ -27,6 +29,7 @@ button
 
 .bigContainer
 {
+    justify-self: center;
     overflow: auto;
     display: flex;
     justify-content: center;
@@ -65,12 +68,20 @@ button
     color:  #3c6bac;
 }
 
+.resultContainer
+{
+    display: flex;
+    justify-content: center;
+    outline: solid 1px red;
+}
+
 .result
 {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
     text-align: right;
     padding-top: 10px;
-    padding-right: 5px;
-    padding-left: 5px;
     width: 150px;
     height: 30px;
     background-color: #417ccc;
